# bt-lowpow

./: README.md
.github/workflows/: build_all.yml
l2/l2_e1/: pmic_gpios.overlay  sample.yaml
l2/l2_e1_s4/: CMakeLists.txt  prj.conf
l2/l2_e1_s5/: CMakeLists.txt
l2/l2_e1_s6/: CMakeLists.txt  prj.conf
l2/l2_e1_sol/: pmic_gpios.overlay  prj.conf
l2/l2_e2/: CMakeLists.txt  prj.conf
l3/l3_e1/: Kconfig.sysbuild  prj.conf  sample.yaml
l3/l3_e1_sol/: prj.conf  sample.yaml
l3/l3_e2/: prj.conf  sample.yaml
l3/l3_e2_sol/: CMakeLists.txt  prj.conf  sample.yaml
l3/peripheral_uart/: Kconfig  prj.conf
l4/l4_e1/: CMakeLists.txt  prj.conf  sample.yaml
l4/l4_e1_sol/: CMakeLists.txt  prj.conf  sample.yaml
l4/l4_e2/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
l4/l4_e2_sol/: CMakeLists.txt  prj.conf  sample.yaml
l4/l4_e3/: CMakeLists.txt  prj.conf  sample.yaml
l4/l4_e3_sol/: prj.conf  sample.yaml
l5/l5_e1/: CMakeLists.txt  prj.conf  sample.yaml
l5/l5_e1_sol/: CMakeLists.txt  prj.conf  sample.yaml
l5/l5_e2/: CMakeLists.txt  prj.conf  sample.yaml
l5/l5_e2/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54ls05dk_nrf54ls05a_cpuapp.overlay
l5/l5_e2/src/: main.c
l5/l5_e2_sol/: Kconfig  prj.conf  sample.yaml
l5/l5_e3/: CMakeLists.txt  Kconfig  helpers.h  main.c  pattern.c  prj.conf  sample.yaml  timer.c
l5/l5_e3_sol/: CMakeLists.txt  helpers.h  prj.conf  sample.yaml  timer.c
l6/l6_e1/: CMakeLists.txt  npm2100_pmic.overlay  pmic_gpios.overlay  sample.yaml
l6/l6_e1_sol/: CMakeLists.txt  app.overlay  (+4 more)
(+84 files in other folders)
